# akaza

./: .gitattributes  .gitignore  .gitmodules  CONTRIBUTING.md  Cargo.toml  Changes.md  HACKING.md  LICENSE  Makefile  Note.md  README.md  TODO.md  comb.py  comb.xml.in  combromkan.py  config.sample.yml  deny.toml  graph.py  ibus.py  latice.py  marisa-trie-latice.py  pytest.ini  requires.txt  skkdict.py
.run/: bigram.run.xml  learn-corpus.run.xml
akaza-conf/: Cargo.toml
akaza-core/libakaza/: Cargo.toml
akaza-core/libakaza/src/: akaza_builder.rs  binary_dict.rs  extend_clause.rs  graph_builder.rs  graph_resolver.rs  kana.rs  kana_kanji_dict.rs  kana_trie.rs  lib.rs  lm.rs  node.rs  romkan.rs  skkdict.rs  tinylisp.rs  trie.rs  user_language_model.rs
akaza-core/libakaza/src/graph/: graph_builder.rs  graph_resolver.rs  lattice_graph.rs  mod.rs  segmenter.rs  word_node.rs
akaza-core/libakaza/src/kana_trie/: crawdad_kana_trie.rs  marisa_kana_trie.rs  mod.rs
akaza-core/libakaza/src/lm/: system_bigram.rs  system_unigram_lm.rs
akaza-core/libakaza/src/user_data/: bigram_user_stats.rs  mod.rs  unigram_user_stats.rs  user_data.rs  user_stats_utils.rs
akaza-core/libakaza/src/user_side_data/: mod.rs  unigram_user_stats.rs  user_data.rs  user_stats_utils.rs
akaza-core/libakaza/tests/: system_bigram_lm.rs  system_unigram_lm.rs  wnn.rs
akaza-data/: .gitattributes  .gitignore  Cargo.toml  Makefile  README.md  mecab-user-dict.csv  requirements.txt  setup.py  test_data.py
akaza-data/akaza_data/: __init__.py  emoji.py  system_dict.py  system_language_model.py  system_language_modelv2.py  systemlm_loader.cc
akaza-data/akaza_data/data/: .gitignore  emoji.trie  system_language_model.1gram.trie  system_language_model.3gram.trie
akaza-data/anthy-corpus/: README.md  corpus.0.txt  corpus.1.txt  corpus.2.txt  corpus.3.txt  corpus.4.txt  corpus.5.txt
akaza-data/corpus/: 00.txt  README.md  kytea.txt  may.txt  must.txt  should.txt
akaza-data/data/: .gitignore  LEGAL  LICENSE  README.md  SKK-JISYO.dynamic  lm_v2_1gram.trie  single_term.trie  stats-vibrato-bigram.trie  stats-vibrato-unigram.trie  system_dict.trie
akaza-data/dict/: SKK-JISYO.akaza
akaza-data/src/: akaza.h  binary_dict.h  debug.h  main.rs  nanoutf8.h  skkdict.h  system_lm.cc  system_lm.h  tinylisp.h  utils.rs
akaza-data/src/aozora_bunko/: aozora_bunko.rs  mod.rs
akaza-data/src/corpus_reader/: aozora_bunko.rs  base.rs  mod.rs  wikipedia_extracted.rs
akaza-data/src/subcmd/: check.rs  dump_bigram_dict.rs  dump_unigram_dict.rs  evaluate.rs  learn_corpus.rs  make_dict.rs  make_kana_trie.rs  make_stats_system_bigram_lm.rs  make_stats_system_unigram_lm.rs  make_system_dict.rs  make_system_lm.rs  make_text_dict.rs  mod.rs  structured_perceptron.rs  tokenize.rs  vibrato_annotate.rs  vocab.rs  wfreq.rs
akaza-data/src/tokenizer/: base.rs  lindera.rs  mod.rs  vibrato.rs
akaza-data/src/wikipedia/: mod.rs  wikipedia_extracted.rs
akaza-data/src/wordcnt/: mod.rs  wordcnt_bigram.rs  wordcnt_unigram.rs
akaza-data/t/: .gitignore  00_systemlm.cc  01_binary_dict.cc  02_skk_dict.cc  03_tinylisp.cc
akaza-data/tests/: kanpoyaku.rs  test_emoji.py  test_merge_terms.py  test_system_dict.py  test_system_language_model.py  test_systemlm_loader.py
akaza-data/utils/: additive_smoothing.py  dump-2gram-json.py  dump-system-dict.py  dump-system_language_model.py  dump-trigram-json.py  dump2gram.py
comb/: comb.py  (+12 more)
ibus-akaza/: .gitignore  Cargo.toml  Makefile  README.md  akaza.xml.in  build.rs  config.h  config.h.in  debug.sh  ibus-akaza-debug.sh  ibus.py  requirements.txt  setup.py  test_ui.py  wrapper.c  wrapper.h
ibus-akaza/ibus_akaza/: config.py.in  config_loader.py  input_mode.py  keymap.py  skk_file_dict.py  ui.py
ibus-akaza/po/: ibus-akaza.pot  ja.po
ibus-akaza/py-ibus-akaza/: README.md
ibus-akaza/py-ibus-akaza/tests/: test_skk_file_dict.py
ibus-akaza/src/: .gitignore  commands.rs  conf.rs  config.rs.in  context.rs  current_state.rs  input_mode.rs  keymap.rs  main.rs  wrapper_bindings.rs
ibus-akaza/src/ui/: mod.rs  prop_controller.rs
ibus-akaza/tests/: test_input_mode.py  test_keymap.py  test_skk_file_dict.py  test_ui.py
libakaza/: .gitignore  CMakeLists.txt  Cargo.toml  build.rs  cbindgen.toml  kana.py
libakaza/include/: akaza.h  binary_dict.h  debug.h  graph.h  graph_resolver.h  node.h  romkan.h  skkdict.h  system_lm.h  tinylisp.h  user_language_model.h
libakaza/src/: akaza.cc  akaza_builder.rs  binary_dict.cc  config.rs  consonant.rs  corpus.rs  cost.rs  debug.h  debug_log.h  extend_clause.rs  graph.cc  graph_resolver.cc  input_style.rs  kana.cc  kana.h  kana.rs  kana_kanji_dict.rs  kansuji.rs  keymap.rs  lib.rs  lm.rs  nanoutf8.h  node.cc  resource.rs  romkan.cc  romkan.rs  romkan_default.h  search_result.rs  skkdict.rs  split.h  system_lm.cc  tinylisp.cc  tinylisp.rs  trie.rs  user_language_model.cc
libakaza/src/dict/: loader.rs  merge_dict.rs  mod.rs  write.rs
libakaza/src/dict/skk/: ari2nasi.rs  mod.rs  read.rs  write.rs
libakaza/src/engine/: akaza_builder.rs  base.rs  bigram_word_viterbi_engine.rs  engine_factory.rs  mod.rs
libakaza/src/graph/: candidate.rs  graph_builder.rs  graph_resolver.rs  lattice_graph.rs  mod.rs  segmenter.rs  word_node.rs
libakaza/src/kana_kanji/: base.rs  hashmap_vec.rs  marisa_kana_kanji_dict.rs  mod.rs
libakaza/src/kana_trie/: base.rs  cedarwood_kana_trie.rs  crawdad_kana_trie.rs  marisa_kana_trie.rs  mod.rs
libakaza/src/lm/: base.rs  mod.rs  system_bigram.rs  system_unigram_lm.rs
libakaza/src/lm/on_memory/: mod.rs  on_memory_system_bigram_lm.rs  on_memory_system_unigram_lm.rs
libakaza/src/skk/: ari2nasi.rs  merge_skkdict.rs  mod.rs  skkdict.rs
libakaza/src/user_side_data/: bigram_user_stats.rs  unigram_user_stats.rs  user_data.rs  user_stats_utils.rs
libakaza/t/: .gitignore  00_systemlm.cc  01_binary_dict.cc  02_skk_dict.cc  03_tinylisp.cc  04_user_language_model.cc  05_node.cc  06_graph_resolver.cc  07_romkan.cc  08_akaza.cc  10_integration.cc  11_wnn.cc  test_akaza.h  tmpfile.h
libakaza/tests/: system_bigram_lm.rs  system_unigram_lm.rs  wnn.rs
(+174 files in other folders)
