[package]
name = "akaza-data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tempfile = "3"
anyhow = "1.0.68"
log = "0.4.17"
libakaza = { path = "../libakaza" }
env_logger = "0.10.0"
clap = { version = "4.0.32", features = ["derive"] }
clap-verbosity-flag = "2.0.0"
encoding_rs = "0.8.31"
regex = "1"
kelp = "0.3.0"
lcs = "0.2.0"
chrono = "0.4.23"
vibrato = "0.3.3"
walkdir = "2"
lindera = { version = "0.19.0", features = ["ipadic"] }
rayon = "1.6.1"

[build-dependencies]
