[package]
name = "ibus-akaza"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tempfile = "3"
anyhow = "1.0.68"
log = "0.4.17"
libakaza = { path = "../libakaza" }
ibus-sys = { path = "../ibus-sys" }
env_logger = "0.10.0"
clap = { version = "4.1.1", features = ["derive"] }
clap-verbosity-flag = "2.0.0"
kelp = "0.4.0"
regex = "1"

[build-dependencies]
cc = "1.0.78"
