[package]
name = "libakaza"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
marisa-sys = { path = "../marisa-sys" }
chrono = "0.4.23"
regex = "1"
log = "0.4.17"
env_logger = "0.10.0"
tempfile = "3"
anyhow = "1.0.68"
half = "2.2.0"
kelp = "0.3.0"
xdg = "2.4.1"
crawdad = "0.4.0"

[build-dependencies]
