[package]
name = "libakaza"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
marisa-sys = { path = "../marisa-sys" }
chrono = "0.4.23"
regex = "1"
log = "0.4.17"
env_logger = "0.10.0"
tempfile = "3"
anyhow = "1.0.68"
half = "2.2.1"
kelp = "0.4.0"
xdg = "2.4.1"
encoding_rs = "0.8.31"
cedarwood = "0.4.6"
serde = { version = "1.0.152", features = ["derive"] }
serde_yaml = "0.9.16"

[build-dependencies]

