[package]
name = "libakaza"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
marisa-sys = { path = "../marisa-sys" }
chrono = "0.4.23"
regex = "1"
sled = "0.34.7"
# daachorse = "1.0.0"
log = "0.4.17"
env_logger = "0.10.0"
tempfile = "3"

[build-dependencies]
